--- a/src/components/ParallaxContainer/AnimatedParallaxContainer.css
+++ b/src/components/ParallaxContainer/AnimatedParallaxContainer.css
@@ -1,7 +1,14 @@
+@-webkit-keyframes animate {
+    from { transform: translate(0, 0); }
+    to { transform: translate(-250px, -500px); }
+}
+/*
+@-webkit-keyframes animate {
+	from {background-position: 0 0;}
+	to {background-position: -100px 0;}
+}*/
+
 .background {
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
   overflow: hidden;
   will-change: transform;
   backface-visibility: hidden;
@@ -9,29 +16,46 @@
   position: fixed;
   width: 100%;
   transform: translateY(30vh);
-  transition: all 1.2s cubic-bezier(0.22, 0.44, 0, 1);
-  background-image: url(../../images/background-white.jpg);
+  transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
 }
 .background:before {
   content: "";
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 175%;
+  height: 175%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  background-image: url(../../images/background-white.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  background-size: cover;
   background-color: rgba(0, 0, 0, 0.1);
+
+  -webkit-animation-name: animate;
+  -webkit-animation-duration: 70s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
 }
+
 .background:first-child {
   transform: translateY(-15vh);
 }
-.background-black {
+.background-black{
   color: white;
+}
+.background-black:before {
   transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
   background-image: url(../../images/background-black.jpg);
 }
-.background-white {
+.background-white{
+  color: black;
+}
+.background-white:before {
   color: black;
   transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
   background-image: url(../../images/background-white.jpg);
