--- a/src/components/ParallaxContainer/AnimatedParallaxContainer.css
+++ b/src/components/ParallaxContainer/AnimatedParallaxContainer.css
@@ -56,7 +56,7 @@
   color: black;
 }
 .background-white:before {
-  color: black;
+  /*color: black;*/
   transition: all 0.8s cubic-bezier(0.22, 0.44, 0, 1);
   background-image: url(../../images/background-white.jpg);
 }
