--- a/src/components/ParallaxContainer/StaticParallaxContainer.css
+++ b/src/components/ParallaxContainer/StaticParallaxContainer.css
@@ -16,10 +16,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url(../../images/background-black.jpg);
+  background-image: url(https://static.pexels.com/photos/133576/pexels-photo-133576.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  /*background-position: top;*/
 
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.1);
