--- a/src/components/ParallaxContainer/IntroductionParallaxContainer/IntroductionParallaxContainer.css
+++ b/src/components/ParallaxContainer/IntroductionParallaxContainer/IntroductionParallaxContainer.css
@@ -23,4 +23,19 @@
   justify-content: space-evenly;
   height: 100%;
   width: 100%;
+  opacity: 1;
+
+    -moz-transition: all 1s ease;
+    -webkit-transition: all 1s ease;
+}
+
+.parallax-flex-parent-slide-off{
+
+  opacity: 0;
+  transform: translate3D(50%,0,0); /* X value must be same as Nav width */
+  -moz-transform: translate3D(50%,0,0); /* X value must be same as Nav width */
+  -webkit-transform: translate3D(50%,0,0); /* X value must be same as Nav width */
+
+  -moz-transition: all .8s ease;
+  -webkit-transition: all .8s ease;
 }
