--- a/src/components/ParallaxContainer/IntroductionParallaxContainer/IntroductionParallaxContainer.css
+++ b/src/components/ParallaxContainer/IntroductionParallaxContainer/IntroductionParallaxContainer.css
@@ -25,7 +25,11 @@
   width: 100%;
   opacity: 1;
 
-    -moz-transition: all 1s ease;
+  transform: translate3D(0,0,0); /* doesn't seem necessary but placing here to be explicit */
+  -moz-transform: translate3D(0,0,0); /* doesn't seem necessary but placing here to be explicit */
+  -webkit-transform: translate3D(0,0,0);/* doesn't seem necessary but placing here to be explicit */
+
+    -moz-transition: all 1s ease; /*transition back to opacity 1*/
     -webkit-transition: all 1s ease;
 }
 
