--- a/src/components/ScrollSpyBar/ScrollSpyBar.css
+++ b/src/components/ScrollSpyBar/ScrollSpyBar.css
@@ -3,7 +3,32 @@
   position: fixed;
   right: 16px;
   top: 50%;
+  height: 50%;
   z-index: 10;
+  border-right: 1px dotted white;
+  padding-right: 2px;
+
+  transform: translate(-50%, -50%);
+
+  /*display:table-cell;*/
+  /*vertical-align:middle;*/
+
+  display: flex;
+   /* establish flex container */
+   flex-direction: column;
+   /* make main-axis vertical */
+   justify-content: center;
+   /* align items vertically, in this case */
+   align-items: center;
+   /* align items horizontally, in this case */
+   height: 50%;
+   /* for demo purposes */
+   /*border: 1px solid black;*/
+   /* for demo purposes */
+   /*background-color: #eee;*/
+   /* for demo purposes */
+
+
 }
 
 #scrollspy-menu ul {
@@ -24,6 +49,7 @@
   width: 12px;
   height: 12px;
   z-index: 30;
+  border: 1px solid white;
 }
 
 .scrollspy-menu__anchor--true {
