--- a/src/components/ParallaxContainer/IntroductionParallaxContainer/IntroductionParallaxContainer.css
+++ b/src/components/ParallaxContainer/IntroductionParallaxContainer/IntroductionParallaxContainer.css
@@ -20,7 +20,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: center;
   height: 100%;
   width: 100%;
   opacity: 1;
@@ -29,8 +29,8 @@
   -moz-transform: translate3D(0,0,0); /* doesn't seem necessary but placing here to be explicit */
   -webkit-transform: translate3D(0,0,0);/* doesn't seem necessary but placing here to be explicit */
 
-    -moz-transition: all 1s ease; /*transition back to opacity 1*/
-    -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease; /*transition back to opacity 1*/
+  -webkit-transition: all 1s ease;
 }
 
 .parallax-flex-parent-slide-off{
