--- a/src/components/ParallaxContainer/StaticParallaxContainer.css
+++ b/src/components/ParallaxContainer/StaticParallaxContainer.css
@@ -16,12 +16,10 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url(https://static.pexels.com/photos/133576/pexels-photo-133576.jpeg);
+  background:linear-gradient(0deg,rgba(200,0,50,0.1),rgba(0,50,90,0.7)),
+    url(https://static.pexels.com/photos/133576/pexels-photo-133576.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
-  /*background-position: top;*/
-
-  background-size: cover;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -72,6 +70,10 @@
   will-change: transform;
   backface-visibility: hidden;
   transition: all 1.7s cubic-bezier(0.22, 0.44, 0, 1);
+}
+.content-wrapper-override{
+  transform: translateY(0vh) !important;
+  height: unset; /* remove the 100vh setting */
 }
 .content-title {
   font-size: 12vh;
