--- a/src/components/ParallaxContainer/AnimatedParallaxContainer.css
+++ b/src/components/ParallaxContainer/AnimatedParallaxContainer.css
@@ -37,7 +37,7 @@
   background-position: center center;
 
   background-size: cover;
-  background-color: rgba(0, 0, 0, 0.1);
+  /*background-color: rgba(0, 0, 0, 0.1);*/
 
   -webkit-animation-name: animate;
   -webkit-animation-duration: 70s;
