--- a/src/components/NavigationDial/NavigationDial.css
+++ b/src/components/NavigationDial/NavigationDial.css
@@ -21,7 +21,9 @@ a{
   position: absolute;
   top: 0;
   right: 0;
-  z-index: 10;
+top: 3px;
+  background: pink;
+    border-top-right-radius: 7em;
 }
 
 
@@ -36,6 +38,8 @@ a{
   position: absolute;
   bottom: 0;
   right: 0;
+  background: orange;
+    border-bottom-right-radius: 7em;
 }
 #quadrant3{
   height: 7em;
@@ -43,6 +47,8 @@ a{
   position: absolute;
   bottom: 0;
   left: 0;
+  background:red;
+  border-bottom-left-radius: 7em;
 }
 #quadrant4{
   height: 7em;
@@ -50,6 +56,8 @@ a{
   position: absolute;
   top: 0;
   left: 0;
+  background:purple;
+  border-top-left-radius: 7em;
 }
 
 ul#navigationDial{
@@ -110,10 +118,10 @@ ul#navigationDial{
 }
 
 #rotator1{
-  margin-left: -120px;
-  margin-top: -120px;
-  width: 240px;
-  height: 240px;
+  margin-left: -124px;
+      margin-top: -124px;
+      width: 249px;
+      height: 249px;
   border-width: 12px  !important;
   /*-webkit-animation: navSpinBG 18s infinite linear;
   animation: navSpinBG 18s infinite linear;*/
@@ -121,8 +129,23 @@ ul#navigationDial{
   transform: rotate(0deg)
 }
 
-#quadrant1:hover + #rotator1{
+#quadrant1:hover ~ #rotator1{
   transform: rotate(135deg);
+  border-left-color: yellow !important;
+}
+
+#quadrant2:hover ~ #rotator1{
+  transform: rotate(225deg);
+  border-left-color: yellow !important;
+}
+
+#quadrant3:hover ~ #rotator1{
+  transform: rotate(315deg);
+  border-left-color: yellow !important;
+}
+
+#quadrant4:hover ~ #rotator1{
+  transform: rotate(45deg);
   border-left-color: yellow !important;
 }
 
