--- a/src/components/NavigationDial/NavigationDial.css
+++ b/src/components/NavigationDial/NavigationDial.css
@@ -8,6 +8,8 @@
 
 nav {
   font-family: 'Roboto Condensed', sans-serif;
+  width: 20em;
+  height: 20em;
 }
 
 a {
@@ -15,49 +17,71 @@ a {
   color: inherit;
 }
 
-#quadrant1 {
+.quadrant {
+  color: white;
   height: 7em;
   width: 7em;
+  display:table;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+#quadrant1 {
   position: absolute;
   top: 0;
   right: 0;
-  top: 3px;
-  /*background: pink;*/
   border-top-right-radius: 7em;
-}
 
-.quadrant {
-  /*background-color: yellow;*/
+  border-bottom: 1px dotted white;
+  border-left: 1px dotted white;
 }
-
 #quadrant2 {
-  height: 7em;
-  width: 7em;
   position: absolute;
   bottom: 0;
   right: 0;
-  /*background: orange;*/
   border-bottom-right-radius: 7em;
+
+  border-left: 1px dotted white;
 }
 
 #quadrant3 {
-  height: 7em;
-  width: 7em;
   position: absolute;
   bottom: 0;
   left: 0;
-  /*background: red;*/
   border-bottom-left-radius: 7em;
+
+  /*border-right: 1px dotted white;*/
 }
 
 #quadrant4 {
-  height: 7em;
-  width: 7em;
   position: absolute;
   top: 0;
   left: 0;
-  /*background: purple;*/
   border-top-left-radius: 7em;
+  border-bottom: 1px dotted white;
+}
+
+.quadrant > .quadrant-text{
+  display:table-cell;
+  padding: 16px;
+}
+
+.quadrant-text-1{
+  vertical-align:bottom;
+  text-align:left;
+;
+}
+.quadrant-text-2{
+  vertical-align:top;
+  text-align:left;
+}
+.quadrant-text-3{
+  vertical-align:top;
+  text-align:right;
+}
+.quadrant-text-4{
+  vertical-align:bottom;
+  text-align:right;
 }
 
 ul#navigationDial {
@@ -74,35 +98,21 @@ ul#navigationDial {
   margin-top: 45px;
   padding-left: 0;
   position: relative;
-
-  box-shadow:
-   inset 0 0 50px #fff,
-   inset 20px 0 80px #f0f,
-   inset -20px 0 80px #0ff,
-   inset 20px 0 300px #f0f,
-   inset -20px 0 300px #4169E1,
-   0 0 50px #fff,
-   -10px 0 80px #f0f,
-   10px 0 80px #0ff;
-
-   transition: box-shadow 0.5s ease-out;
-
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #4169E1, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  transition: box-shadow 0.5s ease-out;
+  display: block;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
-ul#navigationDial:hover{
-  box-shadow:
-  inset 0 0 50px #fff,
-  inset 20px 0 80px #e6e600,
-  inset -20px 0 80px #fff,
-  inset 20px 0 300px #ffcc00,
-  inset -20px 0 300px #fff,
-
-  0 0 40px 20px #fff, 0 0 100px 50px #99cc00;
-   transition: box-shadow 0.5s ease-out;
-
-
+ul#navigationDial:hover {
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #e6e600, inset -20px 0 80px #fff, inset 20px 0 300px #ffcc00, inset -20px 0 300px #fff, 0 0 40px 20px #fff, 0 0 100px 50px #99cc00;
+  transition: box-shadow 0.5s ease-out;
 }
-
 
 #navigationDial li {
   z-index: -1;
@@ -117,21 +127,6 @@ ul#navigationDial:hover{
   border-radius: 500px;
   transition: all 0.5s ease;
 }
-
-
-/*#navigationDial li:last-child:after{
-	content:'';
-	border: 3px dotted rgba(22,42,43,1.0);
-	border-radius: 200px;
-	width: 200px;
-	height: 200px;
-	display: block;
-	position: absolute;
-	top:-3px;
-	left:-3px;
-	background-color: transparent;
-	box-shadow: inset 0px 0px 30px rgba(0,0,0,1.0);
-}*/
 
 #navigationDial li:first-child {
   margin-left: -120px;
@@ -158,12 +153,11 @@ ul#navigationDial:hover{
 #quadrant1:hover~#rotator1 {
   transform: rotate(135deg);
   border-left-color: #99ffff !important;
-
 }
 
-#quadrant2:hover~#rotator1 {
-  transform: rotate(225deg);
-  border-left-color: #00ccff !important;
+.quadrant:hover > .quadrant-text {
+  color: black;
+  font-weight: bold;
 }
 
 #quadrant3:hover~#rotator1 {
