--- a/src/components/ParallaxContainer/StaticParallaxContainer.css
+++ b/src/components/ParallaxContainer/StaticParallaxContainer.css
@@ -1,9 +1,9 @@
-.scrollable{
+/*.scrollable{
   background-color: transparent;
   overflow-y: scroll;
-  height: 100vh;
+  min-height: 100vh;
   width: 90%;
-}
+}*/
 
 .static-background {
   overflow: hidden;
