--- a/src/components/ParallaxContainer/AnimatedParallaxContainer.css
+++ b/src/components/ParallaxContainer/AnimatedParallaxContainer.css
@@ -93,10 +93,10 @@
   align-items: center;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
   flex-flow: column nowrap;
-  transform: translateY(40vh);
+  transform: translateY(0vh);
   will-change: transform;
   backface-visibility: hidden;
   transition: all 0.1s linear;
@@ -123,7 +123,7 @@
   transform: translate3d(0, -130vh, 0);
 }
 .background.down-scroll .content-wrapper {
-  transform: translateY(40vh);
+  /*transform: translateY(40vh);*/
 }
 .background.down-scroll + .background:not(.down-scroll) {
   transform: translate3d(0, -15vh, 0);
