--- a/src/components/ParallaxContainer/StaticParallaxContainer.css
+++ b/src/components/ParallaxContainer/StaticParallaxContainer.css
@@ -23,10 +23,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background:linear-gradient(0deg,rgba(0,0,0,0.1),rgba(0,0,10,0.7)),
-    url(https://static.pexels.com/photos/133576/pexels-photo-133576.jpeg);
+  background:linear-gradient(0deg,rgba(0,0,0,0.1),rgba(255,255,255,0.8)),
+    url(../../images/skyline.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: bottom;
   /*background-color: rgba(0, 0, 0, 0.1);*/
 }
 
