--- a/src/components/ParallaxContainer/TableOfContentsParallaxContainer/TableOfContentsParallaxContainer.css
+++ b/src/components/ParallaxContainer/TableOfContentsParallaxContainer/TableOfContentsParallaxContainer.css
@@ -1,10 +1,4 @@
-/*@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');*/
-
-@import url('https://fonts.googleapis.com/css?family=Comfortaa:300');
-
-/*@import url('https://fonts.googleapis.com/css?family=Muli:300');*/
-
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond|Lora|Merriweather:300|Sorts+Mill+Goudy');
 
 .aspect-ratio {
     height: 0;
@@ -118,6 +112,61 @@
 
 .f6 {
     font-size: .875rem;
+}
+
+.toc-flex-container{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 64px;
+}
+
+.toc-flex-container-item{
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  flex-basis: 50%;
+  height: 100%;
+}
+.toc-flex-container-item__left{
+  background: url(../../../images/me-transparent-light.png);
+    background-size: cover;
+    display:table;
+}
+
+.toc-flex-container-item__left--text-container{
+  font-family: 'Merriweather', serif;
+
+  font-size: 2em;
+  font-weight:300;
+  text-align: left;
+  /*letter-spacing: 1px;*/
+  line-height: 1.05em;
+
+
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.toc-flex-container-item__left--text-container div:first-child{
+  font-style: normal;
+  font-weight: bold;
+}
+
+.toc-flex-container-item__left--text-container div:nth-child(even){
+  font-style: italic;
+
+}
+.toc-flex-container-item__left--text-container div:nth-child(3){
+  font-family: 'Roboto', sans-serif;
+}
+
+
+.toc-flex-container-item__right{
+  color: white;
 }
 
 @media screen and (min-width: 30em) {
