--- a/src/components/ParallaxContainer/TableOfContentsParallaxContainer/TableOfContentsParallaxContainer.css
+++ b/src/components/ParallaxContainer/TableOfContentsParallaxContainer/TableOfContentsParallaxContainer.css
@@ -1,120 +1,119 @@
 @import url('https://fonts.googleapis.com/css?family=EB+Garamond|Lora|Merriweather:300|Sorts+Mill+Goudy');
-
 .aspect-ratio {
-    height: 0;
-    position: relative;
+  height: 0;
+  position: relative;
 }
 
 .aspect-ratio--1x1 {
-    padding-bottom: 100%;
+  padding-bottom: 100%;
 }
 
 .aspect-ratio--object {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
 }
 
 .cover {
-    background-size: cover !important;
+  background-size: cover !important;
 }
 
 .bg-center {
-    background-repeat: no-repeat;
-    background-position: center center;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .cf:before, .cf:after {
-    content: " ";
-    display: table;
+  content: " ";
+  display: table;
 }
 
 .cf:after {
-    clear: both;
+  clear: both;
 }
 
 .cf {
-    *zoom: 1;
+  *zoom: 1;
 }
 
 .db {
-    display: block;
+  display: block;
 }
 
 .fl {
-    float: left;
-    _display: inline;
+  float: left;
+  _display: inline;
 }
 
 .fw4 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .link {
-    text-decoration: none;
-    transition: color .15s ease-in;
+  text-decoration: none;
+  transition: color .15s ease-in;
 }
 
 .link:link, .link:visited {
-    transition: color .15s ease-in;
+  transition: color .15s ease-in;
 }
 
 .link:hover {
-    transition: color .15s ease-in;
+  transition: color .15s ease-in;
 }
 
 .link:active {
-    transition: color .15s ease-in;
+  transition: color .15s ease-in;
 }
 
 .link:focus {
-    transition: color .15s ease-in;
-    outline: 1px dotted currentColor;
+  transition: color .15s ease-in;
+  outline: 1px dotted currentColor;
 }
 
 .w-100 {
-    width: 100%;
+  width: 100%;
 }
 
 .black-90 {
-    color: rgba(0, 0, 0, .9);
+  color: rgba(0, 0, 0, .9);
 }
 
 .black-60 {
-    color: rgba(0, 0, 0, .6);
+  color: rgba(0, 0, 0, .6);
 }
 
 .pb3 {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .ph2 {
-    padding-left: .5rem;
-    padding-right: .5rem;
+  padding-left: .5rem;
+  padding-right: .5rem;
 }
 
 .mb0 {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .mt2 {
-    margin-top: .5rem;
+  margin-top: .5rem;
 }
 
 .f5 {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .f6 {
-    font-size: .875rem;
+  font-size: .875rem;
 }
 
-.toc-flex-container{
+.toc-flex-container {
   display: flex;
   height: 100%;
   width: 100%;
@@ -124,72 +123,77 @@
   padding: 0 64px;
 }
 
-.toc-flex-container-item{
+.toc-flex-container-item {
   flex-grow: 1;
   flex-shrink: 0;
   flex-wrap: wrap;
   flex-basis: 50%;
   height: 100%;
 }
-.toc-flex-container-item__left{
+
+.toc-flex-container-item__left {
   background: url(../../../images/me-transparent-light.png);
-    background-size: cover;
-    display:table;
+  background-size: cover;
+  display: table;
+  opacity: 0;
+
+  /* TRANSISITION */
+  transition: opacity 3s ease-in-out;
+  -webkit-transition: opacity 3s ease-in-out;
+  -moz-transition: opacity 3s ease-in-out;
+  -o-transition: opacity 3s ease-in-out;
 }
 
-.toc-flex-container-item__left--text-container{
-  font-family: 'Merriweather', serif;
+.toc-flex-container-item__left--appear{
+  opacity: 1;
+}
 
+.toc-flex-container-item__left--text-container {
+  font-family: 'Merriweather', serif;
   font-size: 2em;
-  font-weight:300;
+  font-weight: 300;
   text-align: left;
   /*letter-spacing: 1px;*/
   line-height: 1.05em;
-
-
-    display: table-cell;
-    vertical-align: middle;
+  display: table-cell;
+  vertical-align: middle;
 }
 
-.toc-flex-container-item__left--text-container div:first-child{
+.toc-flex-container-item__left--text-container div:first-child {
   font-style: normal;
   font-weight: bold;
 }
 
-.toc-flex-container-item__left--text-container div:nth-child(even){
+.toc-flex-container-item__left--text-container div:nth-child(even) {
   font-style: italic;
-
 }
-.toc-flex-container-item__left--text-container div:nth-child(3){
+
+.toc-flex-container-item__left--text-container div:nth-child(3) {
   font-family: 'Roboto', sans-serif;
 }
 
-
-.toc-flex-container-item__right{
+.toc-flex-container-item__right {
   color: white;
 }
 
 @media screen and (min-width: 30em) {
-    .w-25-ns {
-        width: 25%;
-    }
-
-    .pa2-ns {
-        padding: .5rem;
-    }
-
-    .ph0-ns {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .f4-ns {
-        font-size: 1.25rem;
-    }
+  .w-25-ns {
+    width: 25%;
+  }
+  .pa2-ns {
+    padding: .5rem;
+  }
+  .ph0-ns {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .f4-ns {
+    font-size: 1.25rem;
+  }
 }
 
 @media screen and (min-width: 30em) and (max-width: 60em) {
-    .w-50-m {
-        width: 50%;
-    }
+  .w-50-m {
+    width: 50%;
+  }
 }
