--- a/src/components/ParallaxContainer/DetailParallaxContainer.css
+++ b/src/components/ParallaxContainer/DetailParallaxContainer.css
@@ -31,11 +31,13 @@
 .detail-background-default{
   background:linear-gradient(to bottom,rgba(0,0,0,0.1),rgba(0,0,0,0.9)),
     url(https://static.pexels.com/photos/316902/pexels-photo-316902.jpeg);
+    background-size: cover;
 }
 
 .detail-background-hire{
   background:linear-gradient(to bottom,rgba(0,0,0,0.1),rgba(0,0,0,0.9)),
-    url(https://static.pexels.com/photos/94849/pexels-photo-94849.jpeg);
+    url(https://static.pexels.com/photos/539432/pexels-photo-539432.jpeg);
+    background-size: cover;
 }
 
 
