--- a/src/components/ParallaxContainer/TechnologiesParallaxContainer/TechnologiesParallaxContainer.css
+++ b/src/components/ParallaxContainer/TechnologiesParallaxContainer/TechnologiesParallaxContainer.css
@@ -1,1 +1,5 @@
-
+.static-parallax-container{
+  -webkit-transform: translateY(0vh);
+    -ms-transform: translateY(0vh);
+    transform: translateY(0vh)
+}
