--- a/src/components/ParallaxContainer/DetailParallaxContainer.css
+++ b/src/components/ParallaxContainer/DetailParallaxContainer.css
@@ -41,9 +41,7 @@
 }
 
 .detail-background-tech{
-  background:linear-gradient(to bottom,rgba(0,0,0,0.1),rgba(0,0,0,0.9)),
-    url(https://static.pexels.com/photos/239919/pexels-photo-239919.jpeg);
-  background-size: cover;
+  background: #181818
 }
 
 
