--- a/src/components/ParallaxContainer/TechnologiesParallaxContainer/TechnologiesParallaxContainer.css
+++ b/src/components/ParallaxContainer/TechnologiesParallaxContainer/TechnologiesParallaxContainer.css
@@ -3,3 +3,26 @@
     -ms-transform: translateY(0vh);
     transform: translateY(0vh)
 }
+
+.technologies-grid{
+  color: white;
+  margin-top:32px;
+  background: #181818;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding:16px;
+
+  width: 100%;
+}
+
+.technologies-grid-item{
+  background: #181818;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: 25%;
+  text-align: center;
+  padding:16px;
+  height: 150px;
+}
