--- a/src/components/Knob/Knob.css
+++ b/src/components/Knob/Knob.css
@@ -1,5 +1,256 @@
 /*knob*/
 
+@-webkit-keyframes text-flicker-out-glow {
+  0% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.6), 0 0 60px rgba(243, 51, 255, 0.45), 0 0 110px rgba(243, 51, 255, 0.25), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  13.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.6), 0 0 60px rgba(243, 51, 255, 0.45), 0 0 110px rgba(243, 51, 255, 0.25), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  14% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  14.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  15% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.4), 0 0 110px rgba(243, 51, 255, 0.2), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  22.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.4), 0 0 110px rgba(243, 51, 255, 0.2), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  23% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  24.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  25% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  34.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  35% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  39.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  40% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35);
+  }
+  42.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35);
+  }
+  43% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  44.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  45% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  50% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  54.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  55% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  69.4% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  69.5% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  69.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  70% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  79.4% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  79.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.25);
+  }
+  80% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  89.8% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  89.9% {
+    opacity: 1;
+    text-shadow: none;
+  }
+  90% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes text-flicker-out-glow {
+  0% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.6), 0 0 60px rgba(243, 51, 255, 0.45), 0 0 110px rgba(243, 51, 255, 0.25), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  13.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.6), 0 0 60px rgba(243, 51, 255, 0.45), 0 0 110px rgba(243, 51, 255, 0.25), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  14% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  14.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  15% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.4), 0 0 110px rgba(243, 51, 255, 0.2), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  22.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.4), 0 0 110px rgba(243, 51, 255, 0.2), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  23% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  24.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  25% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  34.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35), 0 0 100px rgba(243, 51, 255, 0.1);
+  }
+  35% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  39.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  40% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35);
+  }
+  42.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.55), 0 0 60px rgba(243, 51, 255, 0.35);
+  }
+  43% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  44.9% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  45% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  50% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  54.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  55% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  69.4% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  69.5% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  69.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.45), 0 0 60px rgba(243, 51, 255, 0.25);
+  }
+  70% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  79.4% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  79.9% {
+    opacity: 1;
+    text-shadow: 0 0 30px rgba(243, 51, 255, 0.25);
+  }
+  80% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  89.8% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  89.9% {
+    opacity: 1;
+    text-shadow: none;
+  }
+  90% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 .knob-surround {
   margin-left: auto;
   margin-right: auto;
@@ -24,14 +275,18 @@
 
 .knob {
   width: 100%;
- height: 100%;
+  height: 100%;
   border-radius: 50%;
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
   -o-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   transform: rotate(0deg);
-  z-index: 10;
+
+  -moz-transition: all 2s linear;
+  -webkit-transition: all 2s linear;
+  -o-transition: all 2s linear;
+  transition: all 2s linear;
 }
 
 .knob:before {
@@ -102,6 +357,10 @@
   -moz-transition: all 50ms ease-in;
   -o-transition: all 50ms ease-in;
   transition: all 50ms ease-in;
+
+  -webkit-animation: text-flicker-out-glow 1.3s  alternate ease;
+  	-moz-animation: text-flicker-out-glow 1.3s  alternate ease;
+  	animation: text-flicker-out-glow 1.3s  alternate ease;
 }
 
 .tick:nth-child(1) {
@@ -365,15 +624,12 @@
 }
 
 .label-name {
-  bottom: -5em;
+  font-family: 'Rotobo Condensed', sans-serif;
   color: rgba(255, 255, 255, 0.9);
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   -webkit-font-smoothing: antialiased;
-  /* position: absolute; */
   opacity: .9;
-  /* left: 5em; */
-  /* text-align: center; */
-  padding-top: 100px;
+  padding-top: 85px;
 }
 
 .knob-parent {
